test params and readme

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ app.py
 TEST Flask.ipynb
 TEST-segmentation.ipynb
 TEST app.ipynb
+TEST Inpainting.ipynb
+TEST 2- Neural network new params.ipynb
